--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1008,3 +1008,15 @@ footer {
     width: auto;
   }
 }
+
+.nav{width: 80%;margin: 0 auto;}
+.nav li{float: left;width: 20%;padding: 1% 0;text-align: center;color: #fff;cursor: pointer;}
+.content{padding: 2% 0;}
+.schedule_list_outer{width: 90%;margin: 0 auto;max-width: 800px;}
+.schedule_list_outer td{padding: 1%;border: 1px solid #fff;color: #fff;}
+.schedule_list_outer td:first-of-type{background: #4eb8fb;width: 20%;}
+.schedule_list_outer td:last-of-type{background: #4499EE;width: 80%;}
+.pic_outer{height: 180px;overflow: hidden;margin: 2% 0;}
+.pic{display: block;width: 50%;float: left;}
+.fixed:after {content: '.';display: block;height: 0;clear: both;font-size: 0;}
+.fixed{*zoom: 1;}
