--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -792,7 +792,7 @@ header p {
 }
 
 section {
-  width: 590px;
+  width: 646px;
   padding: 30px 30px 50px 30px;
   margin: 20px 0;
   margin-top: 190px;
@@ -1008,7 +1008,7 @@ footer {
     width: auto;
   }
 }
-
+.nav_outer{background: #049FF1;}
 .nav{width: 90%;margin: 0 auto;}
 .nav li{float: left;width: 20%;padding: 1% 0;text-align: center;color: #fff;cursor: pointer;}
 .content{padding: 2% 0;}
